--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
 ### IntelliJ IDEA ###
+.idea/
+*.iml
+*.ipr
+*.iws
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
+# Diretórios de cache e configurações do usuário
+.idea/caches/
+.idea/libraries/
+.idea/shelf/
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/modules.xml
 
 ### Eclipse ###
 .apt_generated
